src/objects/MTN_Channels_Activity__c.object
<CustomObject>
    <description>A representation of one activity carried out be a Channels Staff member.</description>
    <fields>
        <fullName>AS_Easy_Load__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The available stock of easy load</description>
        <inlineHelpText>Please enter the available stock of easy load in UGK</inlineHelpText>
        <label>AS Easy Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_Modems__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The available stock of modems</description>
        <inlineHelpText>Please enter the available stock of modems in UGK</inlineHelpText>
        <label>AS Modems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_Phones__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The available stock of phones</description>
        <inlineHelpText>Please enter the available stock of phoness in UGK</inlineHelpText>
        <label>AS Phones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_Scratch_Cards__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The available stock of scratch cards</description>
        <inlineHelpText>Please enter the available stock of modems in UGK</inlineHelpText>
        <label>AS Scratch Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_Sim_Packs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The available stock of sim packs</description>
        <inlineHelpText>Please enter the available stock of sim packs in UGK</inlineHelpText>
        <label>AS Sim Packs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>The activity type that this record is for</description>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attendants_Number__c</fullName>
        <description>The phone number of the attendant who was at the outlet</description>
        <inlineHelpText>Please enter the phone number of the attendant at the outlet</inlineHelpText>
        <label>Attendants Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comment made by the interviewer</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSD__c</fullName>
        <description>The name of the DSD who delivers the stock</description>
        <inlineHelpText>Please enter the DSD who delivers the stock</inlineHelpText>
        <label>DSD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <description>The dealership that this outlet is attached to</description>
        <label>Dealership</label>
        <referenceTo>MTN_Channels_Dealership__c</referenceTo>
        <relationshipLabel>MTN Channels Activities</relationshipLabel>
        <relationshipName>MTN_Channels_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The time the visit ended</description>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Get_Stock_DSD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Does the outlet get stock by dsd. binary</description>
        <inlineHelpText>Check if the outlet gets their stock via DSD</inlineHelpText>
        <label>Get Stock DSD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Get_Stock_Self__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Does the outlet get their stock themselves. Binary</description>
        <inlineHelpText>Check if the outlet goes and get their stock themselves</inlineHelpText>
        <label>Get Stock Self</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Easy_Load__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The initial stock level of modems in UGX</description>
        <inlineHelpText>Please enter the initial stock levels of easy load in the outlet in UGX</inlineHelpText>
        <label>IS Easy Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Modems__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The initial stock level of modems in UGX</description>
        <inlineHelpText>Please enter the initial stock levels of modems in the outlet in UGX</inlineHelpText>
        <label>IS Modems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Phones__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The initial stock level of phones in UGX</description>
        <inlineHelpText>Please enter the initial stock levels of phones in the outlet in UGX</inlineHelpText>
        <label>IS Phones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Scratch_Cards__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The initial stock level of scratch cards in UGX</description>
        <inlineHelpText>Please enter the initial stock levels of scratch cards in the outlet in UGX</inlineHelpText>
        <label>IS Scratch Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Sim_Packs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The initial stock level of sim packs in UGX</description>
        <inlineHelpText>Please enter the initial stock levels of modems in the outlet in UGX</inlineHelpText>
        <label>IS Sim Packs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>The latitude at which the activity was carried out</description>
        <label>Latitude</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>The longitude at which the activity was carried out</description>
        <label>Longitude</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_Co_Brand__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet had an MTN co-branded name board</description>
        <label>MTN Merch Co Branded Name Board</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_Dangler__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has an MTN Dangler</description>
        <label>MTN Merch Dangler</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_Light_Box__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet had an MTN Light Box</description>
        <label>MTN Merch Light Box</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_None__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has no MTN merch on display</description>
        <label>MTN Merch None</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_Other_Name__c</fullName>
        <description>The name of the other type of mtn merch that is on display</description>
        <label>MTN Merch Other Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that other merchandise is on display</description>
        <label>MTN Merch Other</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_Placard__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that this outlet had an MTN placard on display</description>
        <label>MTN Merch Placard</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_Poster__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that this outlet has an MTN poster on display</description>
        <label>MTN Merch Poster</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_SIM__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate the outlet had an MTN SIM card holder</description>
        <label>MTN Merch SIM</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTN_Merch_Wall__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has MTN wall branding</description>
        <label>MTN Merch Wall Branding</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Airtel__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has airtel merch on display</description>
        <label>Merch Airtel</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_Co_Brand__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has a competitors co-branded name board</description>
        <label>Merch Competitor Co-branded Name Board</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_Dangler__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has a competitors dangler on display</description>
        <label>Merch Competitor Dangler</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_Light_Box__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has a competitors light box on display</description>
        <label>Merch Competitor Light Box</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_None__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has no competitor merchandise on sale</description>
        <label>Merch Competitor None</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_Other_Name__c</fullName>
        <description>The name of the other type of competitor merch that is on display</description>
        <label>Merch Competitor Other Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has some other type of competitors merchandise on display</description>
        <label>Merch Competitor Other</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_Placard__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has a competitors placard on display</description>
        <label>Merch Competitor Placard</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_Poster__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has a competitors poster on display</description>
        <label>Merch Competitor Poster</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_SIM__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has a competitors sim pack holder on display</description>
        <label>Merch Competitor SIM</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Comp_Wall__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has a competitors wall branding on display</description>
        <label>Merch Competitor Wall Branding</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Orange__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has Orange merch on display</description>
        <label>Merch Orange</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Other_Name__c</fullName>
        <description>The name of the other company that has merchandise on sale</description>
        <label>Merch Other Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merch_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has another companies merch on display</description>
        <label>Merch Other</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_UTL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has UTL merch on display</description>
        <label>Merch UTL</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Warid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet has warid merch on display</description>
        <label>Merch Warid</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outlet_Attendants_Name__c</fullName>
        <description>The name of the attend who is being interviewed for the activity</description>
        <inlineHelpText>Please enter the name of the attendant who was at the outlet</inlineHelpText>
        <label>Outlet Attendants Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outlet_Name__c</fullName>
        <description>The name of the outlet that was visited</description>
        <inlineHelpText>Please enter the name of the outlet that was visited for this activity</inlineHelpText>
        <label>Outlet Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outlet_Type__c</fullName>
        <description>The type of outlet that the staff member visited</description>
        <label>Outlet Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Money shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The staff member that carried out the activity</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>MTN Channels Activities</relationshipLabel>
        <relationshipName>MTN_Channels_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promotion_Type_Other__c</fullName>
        <description>The name of the other promotion type</description>
        <label>Promotion Type Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <description>If this activity was a promotion. What sort of promotion was it?</description>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dealership Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easy Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Day Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIM Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>War Room</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region that the activity was carried out in</description>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>MTN Channels Activities</relationshipLabel>
        <relationshipName>MTN_Channels_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIM_Registration_Existing__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of existing SIM registrations made during the promotion</description>
        <label>SIM Registration Existing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIM_Registration_New__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of new SIMs registered during the promotion</description>
        <label>SIM Registration New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Easy_Load__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount in UGX that was sold during the promotion</description>
        <label>Sales Easy Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Modems__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount in UGX of modems that were sold during the promotion</description>
        <label>Sales Modems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Phones__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount in UGX of phones sold during promotion</description>
        <label>Sales Phones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Scratch_Cards__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount in UGX of scratch cards sold during promotion</description>
        <label>Sales Scratch Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Sim_Cards__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount in UGX that was sold during the promotion</description>
        <label>Sales Sim Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Airtel__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate if the outlet sells Airtel products</description>
        <inlineHelpText>Please enter 1 if the outlet sells Airtel and 0 if it does not</inlineHelpText>
        <label>Sell Airtel</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Most_Other__c</fullName>
        <description>The name of the other company who&apos;s merchandise the outlet sells most of</description>
        <inlineHelpText>Please enter the name of the other company that the outlet sells the most of</inlineHelpText>
        <label>Sell Most Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sell_Most__c</fullName>
        <description>The company who&apos;s products the outlet sells the most of</description>
        <inlineHelpText>Please choose the company that this outlet sells the most product for</inlineHelpText>
        <label>Sell Most</label>
        <picklist>
            <picklistValues>
                <fullName>MTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airtel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sell_None__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that this outlet sells no other competitors products</description>
        <inlineHelpText>Please enter 1 if no other companies products are sold, 0 if they are</inlineHelpText>
        <label>Sell None</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Orange__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate that the outlet sells Orange products</description>
        <inlineHelpText>Please enter a 1 if the outlet sells Orange and a 0 if they do not</inlineHelpText>
        <label>Sell Orange</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Other_Name__c</fullName>
        <description>The name of the other company that the outlet sells product for</description>
        <inlineHelpText>Please enter the name of the other company that the outlet sells product for</inlineHelpText>
        <label>Sell Other Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sell_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate if the outlet sells other products</description>
        <inlineHelpText>Please enter a 1 if this outlet sells other products, 0 if not</inlineHelpText>
        <label>Sell Other</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Second_Most_Other__c</fullName>
        <description>The other company name that is sold the second most</description>
        <label>Sell Second Most Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sell_Second_Most__c</fullName>
        <description>What does the outlet sell the second most of</description>
        <inlineHelpText>Please enter the company that this outlet sells the 2nd most product for</inlineHelpText>
        <label>Sell Second Most</label>
        <picklist>
            <picklistValues>
                <fullName>Airtel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sell_UTL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate if the outlet sells UTL products</description>
        <inlineHelpText>Please enter 1 if the outlet sells UTL, 0 if they do not</inlineHelpText>
        <label>Sell UTL</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Warid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Binary to indicate if the outlet sells Warid</description>
        <inlineHelpText>Please enter 1 if the outlet sells Warid, 0 if it does not</inlineHelpText>
        <label>Sell Warid</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>DATEVALUE(Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The time that the visit started</description>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <description>The town that the outlet is in</description>
        <inlineHelpText>Please enter the town that the outlet is in</inlineHelpText>
        <label>Town</label>
        <type>TextArea</type>
    </fields>
    <label>MTN Channels Activity</label>
    <nameField>
        <displayFormat>MCA{YY}{MM}{DD}{0000000000}</displayFormat>
        <label>MTN Channels Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTN Channels Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>